Project: migrate to MPS 2025.3