@@ -49,7 +49,7 @@
       <idea-plugin>
         <id>alfi</id>
         <name>alfi</name>
-        <version>2025.2.5</version>
+        <version>2025.3.0</version>
         <depends>com.intellij.modules.mps</depends>
         <depends>jetbrains.mps.core</depends>
         <depends>jetbrains.mps.testing</depends>
@@ -1464,7 +1464,6 @@
       <jvmargs>
         <arg value="-ea" />
         <arg value="-Xmx512m" />
-        <arg value="--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
       </jvmargs>
       <macro name="mps_home" path="${mps_home}" />
       <macro name="dependencies_home" path="${dependencies_home}" />
@@ -2662,12 +2661,10 @@
         <arg value="-ea" />
         <arg value="-Xss2048k" />
         <arg value="-Xmx1024m" />
-        <arg value="-XX:+HeapDumpOnOutOfMemoryError" />
         <arg value="-Didea.config.path=${build.mps.config.path}" />
         <arg value="-Didea.system.path=${build.mps.system.path}" />
-        <arg value="-Dintellij.platform.load.app.info.from.resources=true" />
+        <arg value="-Didea.split.test.logs=true" />
         <arg value="-Djna.boot.library.path=${build.jna.library.path}" />
-        <arg value="-Dintellij.progress.task.ignoreHeadless=true" />
       </jvmargs>
       
       
